--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <body>
     <div class="container">
       <div class="clock">
-        <h1>Khaled</h1>
-        <div style="--clr: #ff3d58; --h: 74px" id="hour" class="hand">
+        <h1>Ahmad</h1>
+        <div style="--clr: #f506f1b8; --h: 74px" id="hour" class="hand">
           <i></i>
         </div>
-        <div style="--clr: #00a6ff; --h: 84px" id="min" class="hand">
+        <div style="--clr: #00ff55; --h: 84px" id="min" class="hand">
           <i></i>
         </div>
         <div style="--clr: #ffffff; --h: 94px" id="sec" class="hand">
